[gd_scene format=3 uid="uid://oxiqxcmiek37"]

[ext_resource type="Script" uid="uid://cwnbni6tfjp40" path="res://scripts/ui/pause_menu.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://bavk1ey3x58xh" path="res://sprites_2/kenney_ui-pack/Font/Kenney Future.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://dfjhjtnonr5od" path="res://sprites_2/kenney_ui-pack/PNG/Blue/Double/button_rectangle_flat.png" id="3_btn_n"]
[ext_resource type="Texture2D" uid="uid://csldvpmfpsmxv" path="res://sprites_2/kenney_ui-pack/PNG/Blue/Double/button_rectangle_gloss.png" id="4_btn_p"]

[node name="PauseMenu" type="Control" unique_id=652487326]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="." unique_id=199852785]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1618972402]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1341675149]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1410830727]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 40
text = "pause"
horizontal_alignment = 1

[node name="ResumeButton" type="TextureButton" parent="CenterContainer/VBoxContainer" unique_id=2043885027]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
texture_normal = ExtResource("3_btn_n")
texture_pressed = ExtResource("4_btn_p")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ResumeButton" unique_id=255843387]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "voltar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="TextureButton" parent="CenterContainer/VBoxContainer" unique_id=791312738]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
texture_normal = ExtResource("3_btn_n")
texture_pressed = ExtResource("4_btn_p")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SaveButton" unique_id=1616190232]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Salvar mundo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="CenterContainer/VBoxContainer" unique_id=862112215]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
texture_normal = ExtResource("3_btn_n")
texture_pressed = ExtResource("4_btn_p")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/QuitButton" unique_id=50405488]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "voltar ao menu"
horizontal_alignment = 1
vertical_alignment = 1
